--- a/scss/block/_offer.scss
+++ b/scss/block/_offer.scss
@@ -1,6 +1,5 @@
 .offer{
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding: 100px 0;
     background-color: #3D4A39;
 }
 
@@ -11,15 +10,12 @@
 }
 
 .offer__cards{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    column-gap: 185px;
-    flex-wrap: wrap;
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   row-gap: 72px;
 }
 
 .offer__card{
-    margin-bottom: 70px;
     text-align: center;
     max-width: 278px;
     
@@ -35,40 +31,15 @@
     font-weight: 500;
     line-height: 130%;
     opacity: 0.5;
-    margin-top: 29px;
 }
 
-@media screen and (max-width: 1010px) {
-    .offer__cards{
-        justify-content: center;
-        column-gap: 135px;
-    }
-}
 
 @media screen and (max-width: 640px) {
-    .offer__title{
-        font-size: 36px;
-    }
     .offer__cards{
-        column-gap: 60px;
-    }
-
-    .offer__card{
-        img{
-            max-width: 60px;
-        }
-    }
-
+        grid-template-columns: repeat(2, 1fr);
+     }
+    
     .offer__card_title{
         font-size: 18px;
-    }
-}
-
-@media screen and (max-width: 390px) {
-    .offer__title{
-        font-size: 24px;
-    }
-    .offer__cards{
-        column-gap: 20px;
     }
 }
